# ChangeLog for dev-python/generatorrunner
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*generatorrunner-0.3.2 (05 Dec 2009)

  05 Dec 2009; Dominik Kapusta <ayoy@gentoo.org>
  +generatorrunner-0.3.2.ebuild, -generatorrunner-0.3.2a_p1.ebuild:
  Version bump, remove old

*generatorrunner-9999 (08 Nov 2009)

  08 Nov 2009; Dominik Kapusta <ayoy@gentoo.org>
  +generatorrunner-9999.ebuild:
  Adding live ebuild, compatible with Qt 4.6

*generatorrunner-0.3.2a_p1 (07 Nov 2009)

  07 Nov 2009; Dominik Kapusta <ayoy@gentoo.org>
  +generatorrunner-0.3.2a_p1.ebuild, +metadata.xml:
  Initial commit of generatorrunner, dependency for boostpythongenerator
