@@ -24,3 +24,8 @@ S="${WORKDIR}/${PN}"
 src_prepare() {
 	sed -e 's/-2.6//' -i CMakeLists.txt || die "sed failed"
 }
+
+src_install() {
+	cmake-utils_src_install
+	dodoc AUTHORS ChangeLog || die "dodoc failed"
+}
