@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  06 Dec 2009; Dominik Kapusta <ayoy@gentoo.org>
+  generatorrunner-0.3.2.ebuild, generatorrunner-9999.ebuild:
+  Added some docs to src_install
+
 *generatorrunner-0.3.2 (05 Dec 2009)
 
   05 Dec 2009; Dominik Kapusta <ayoy@gentoo.org>
